# pybravia

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
pybravia/: __init__.py  braviatv.py  client.py  const.py  exceptions.py  util.py
scripts/: psk-connect.py
tests/: __init__.py  conftest.py  test_client.py
tests/fixtures/: system_info.json
