[tool.poetry]
name = "pybravia"
version = "0.2.4"
description = "Python async library for remote control of Sony Bravia TVs 2013 and newer."
authors = ["Arem Draft <artemon_93@mail.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Drafteed/pybravia"
packages = [
  { include = "pybravia" }
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
mypy = "^0.991"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
