[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pybravia"
version = "0.4.1"
license = {text = "MIT"}
description = "Python async library for remote control of Sony Bravia TVs 2013 and newer."
readme = "README.md"
authors = [{name = "Artem Draft"}]
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.8",
  "yarl",
]

[dependency-groups]
dev = [
  "ruff==0.14.10",
  "pre-commit==4.5.1",
  "mypy==1.19.1",
]
test = [
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "aioresponses==0.7.8",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
